# osdu-mcp-server

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  release-please-config.json  setup.cfg
.github/: dependabot.yml  labels.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml  security.yml
docs/: authentication.md  getting-started.md  label-strategy.md  project-architect.md  project-brief.md  project-prd.md
docs/adr/: 001-mcp-framework-selection.md  002-authentication-strategy.md  003-configuration-management-approach.md  004-error-handling-architecture.md  005-http-client-implementation.md  006-project-structure-and-packaging.md  007-tool-implementation-pattern.md  008-async-first-design.md  009-service-url-management.md  010-testing-philosophy-and-strategy.md  011-oauth-scope-simplification.md  012-multi-provider-authentication-architecture.md  013-service-client-architecture-pattern.md  014-write-protection-pattern.md  015-sensitive-data-handling-pattern.md  016-structured-logging-and-observability-pattern.md  017-non-json-response-handling.md  018-member-identifier-handling-pattern.md  019-tool-naming-convention.md  020-unified-write-protection.md  021-record-validation-pattern.md  022-confirmation-requirement-pattern.md  023-enhanced-audit-logging-pattern.md  024-prompt-implementation-pattern.md  025-prompt-naming-convention.md  026-content-generation-strategy.md  027-mcp-resources-implementation-pattern.md  028-data-domain-configuration-pattern.md  029-multi-cloud-authentication.md  README.md
src/osdu_mcp_server/: __init__.py  main.py  server.py
src/osdu_mcp_server/prompts/: __init__.py  guide_record_lifecycle.py  guide_search_patterns.py  list_assets.py
src/osdu_mcp_server/resources/: __init__.py
src/osdu_mcp_server/resources/references/: acl-format-examples.json  search-query-patterns.json
src/osdu_mcp_server/resources/templates/: legal-tag-template.json  processing-parameter-record.json
src/osdu_mcp_server/shared/: __init__.py  assets_generator.py  auth_handler.py  config_manager.py  exceptions.py  logging_manager.py  osdu_client.py  service_urls.py  utils.py
src/osdu_mcp_server/tools/: __init__.py  health_check.py
src/osdu_mcp_server/tools/legal/: get.py  (+8 more)
tests/: README.md  __init__.py  test_health_check.py  test_server.py  test_server_prompts.py
tests/prompts/: __init__.py  test_guide_record_lifecycle.py  test_guide_search_patterns.py  test_list_assets.py
tests/resources/: test_workflow_resources.py
tests/shared/: __init__.py  test_assets_generator.py  test_auth.py  test_auth_multicloud.py  test_config.py  test_exceptions.py  test_logging.py  test_osdu_client.py  test_utils.py
tests/tools/: __init__.py
tests/tools/entitlements/: __init__.py  test_mine.py
tests/tools/legal/: __init__.py  test_list.py  test_write_protection.py
tests/tools/partition/: __init__.py  test_get.py  test_list.py  test_write_protection.py
tests/tools/schema/: __init__.py  test_get.py  test_list.py  test_search.py  test_write_protection.py
tests/tools/search/: test_search_behavior.py
tests/tools/storage/: __init__.py  test_get_record.py  test_query_records_by_kind.py  test_write_protection.py
(+34 files in other folders)
